# vrchat-webcam-tracker

./: .gitignore  README.md  build.spec  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
docs/: MACOS_SETUP.md  VRCHAT_SETUP.md  WINDOWS_SETUP.md
scripts/: run.bat  run.sh  setup.bat
src/: __init__.py  cli_tracker.py  config.py  main.py  osc_sender.py  osc_test.py  osc_test_tracking.py  test_tracker.py  test_tracking.py  trackers.py
