[project]
name = "vrchat-webcam-tracker"
version = "0.1.0"
description = "VRChat Webcam Tracker - detects facial expressions and arm movements and sends them to VRChat"
authors = [
    {name = "Minagishl", email = "minagishl@icloud.com"},
]
dependencies = [
    "opencv-python>=4.8.0",
    "python-osc>=1.8.0",
    "numpy>=1.24.0,<2.0.0",
    "opencv-stubs>=0.0.11",
    "click>=8.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "black>=23.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pylint]
max-args = 6